<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mine_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_tool_bar_background"
            app:layout_scrollFlags="scroll|enterAlways">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_light_gray_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mine_overview_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/mine_round_background"
                android:padding="@dimen/dp_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/mine_statistic_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_statistic_overview_label"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/mine_statistic_reservation_times_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_statistic_reservation_times_label"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/mine_statistic_breach_times_label"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/mine_statistic_breach_times_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_overview" />

                <TextView
                    android:id="@+id/mine_statistic_breach_times_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_statistic_breach_times_label"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/mine_statistic_reservation_times_label"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_overview" />

                <TextView
                    android:id="@+id/mine_statistic_reservation_times"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@+id/mine_statistic_breach_times"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_reservation_times_label"
                    tools:text="10" />

                <TextView
                    android:id="@+id/mine_statistic_breach_times"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mine_statistic_reservation_times"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_breach_times_label"
                    tools:text="4" />

                <TextView
                    android:id="@+id/mine_statistic_study_times_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mine_statistic_study_times_label"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/mine_statistic_study_times_per_day_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_reservation_times" />

                <TextView
                    android:id="@+id/mine_statistic_study_times_per_day_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/mine_statistic_study_times_per_day_label"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mine_statistic_study_times_label"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_breach_times" />

                <TextView
                    android:id="@+id/mine_statistic_study_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@+id/mine_statistic_study_time_per_day"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_study_times_label"
                    tools:text="4时50分" />

                <TextView
                    android:id="@+id/mine_statistic_study_time_per_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/mine_statistic_study_time"
                    app:layout_constraintTop_toBottomOf="@+id/mine_statistic_study_times_per_day_label"
                    tools:text="30分" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/mine_study_time_layout"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/mine_round_background"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mine_overview_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mine_study_time_label"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/line_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/mine_round_background"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mine_study_time_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mine_org_time_analysis_label"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pie_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="@dimen/dp_10" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>